<resources>
    <string name="app_name">Articlo</string>
    <string name="app_icon_logo">App icon logo</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="on_boarding_0_title">Read interesting articles every single day!</string>
    <string name="on_boarding_0_subtitle">In today’s digital age, it’s easier than ever to access exciting articles. Discover where to read good articles in this article.</string>
    <string name="on_boarding_1_title">Create &amp; Publish your own articles to the world!</string>
    <string name="on_boarding_1_subtitle">With Articlo, it is easy for anyone to  publish articles online.</string>
    <string name="on_boarding_2_title">Let\'s Connect with others right now!</string>
    <string name="on_boarding_2_subtitle">With Articlo, it is easy for anyone to learn how to publish articles online.</string>
    <string name="hello_there">Hello there 👋🏻</string>
    <string name="please_enter_your_username_email_and_password_to_sign_in">Please enter your username/email and password to sign in.</string>
    <string name="username_email">Username/Email</string>
    <string name="user_example_com" translatable="false">user@example.com</string>
    <string name="password">Password</string>
    <string name="xxxxxxxxxxxxx" translatable="false">xxxxxxxxxxxxx</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create new account</string>
    <string name="user_icon_image">User Icon Image</string>
    <string name="loading">Loading…</string>
    <string name="please_wait_while_your_process_finish_it_may_take_seconds">Please wait while your process finish, it may take seconds</string>
    <string name="please_enter_all_required_fields">Please enter all required fields</string>
    <string name="wrong_email_or_password">Wrong email address or password</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="password_cant_be_less_than_6">Password can\'t be less than 6 characters</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="server_error">Server error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="navigate_back_arrow">Navigate back arrow</string>
    <string name="which_country_are_you_from">Which country are you from? 🏳️</string>
    <string name="search">Search</string>
    <string name="please_select_country_of_origin">Please select country of origin.</string>
    <string name="complete_your_profile">Complete your profile. 🗒️</string>
    <string name="don_t_worry_only_ypu_can_see_your_personal_data_no_one_will_be_able_to_see_it">Don\'t worry, only ypu can see your personal data. No one will be able to see it.</string>
    <string name="user_image">User image</string>
    <string name="edit">Edit</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="create_an_account">Create an account 🔐</string>
    <string name="enter_your_email_amp_password_if_you_forgot_it_then_you_have_to_do_forget_password"><![CDATA[Enter your email & password. if you forgot it, then you have to do forget password.]]></string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="select_your_topics_of_interest">Select your topics of interest 🏷️</string>
    <string name="select_your_topics_of_interest_for_better_recommendations_or_you_can_skip">Select your topics of interest for better recommendations or you can skip.</string>
    <string name="pick_some_people_to_follow">Pick some people to follow</string>
    <string name="discover_people">Discover People 🥰</string>
    <string name="follow">Follow</string>
</resources>