<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.codersinvasion.articlo.ui.login.viewModel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.view.LoginFragment"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_hello_there"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_there"
            style="@style/TextAppearance.Material3.DisplaySmall"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_tip"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:text="@string/please_enter_your_username_email_and_password_to_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_hello_there"
            app:layout_constraintTop_toBottomOf="@+id/tv_hello_there" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_username_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/username_email"
            app:layout_constraintTop_toBottomOf="@+id/tv_error_message"
            tools:layout_editor_absoluteX="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_username_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.loginUiState.email}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:layout_constraintTop_toBottomOf="@+id/tf_username_email"
            tools:layout_editor_absoluteX="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.loginUiState.password}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_forgot_password"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tf_password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="24dp"
            android:text="@string/login"
            android:onClick="@{() -> viewModel.login()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_forgot_password" />

        <Button
            android:id="@+id/btn_create_new_account"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="8dp"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/create_new_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <TextView
            android:id="@+id/tv_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="@color/error"
            android:visibility="invisible"
            android:setError="@{viewModel.loginUiState.mainError}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_tip"
            tools:text="Email address and password are required" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>